--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a student.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chicago, IL
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Disc Golf</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To allow for a true work/life balance</p>
     </section>
 
     <footer id="footer">
